--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
        
         <!-- HEADER -->
         <header class="bg-black">
-            <div class="d-flex justify-end speaker bg-grey">
-                <div class="speaker-view">
-                    <i class="fa-sharp fa-light fa-table-cells"></i>
+            <div class="d-flex justify-end speaker c-white">
+                <div class="speaker-view bg-grey">
+                    <i class="fa-solid fa-table-cells-large"></i>
                     <span>Speaker View</span>
                 </div>
                 <div><i class="fa-solid fa-maximize bg-grey"></i></div>
@@ -24,8 +24,289 @@
         </header>
 
         <!-- MAIN -->
-        <main>
+        <main class="bg-black">
+            <div class="container d-flex wrap justify-between">
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
 
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+                <div class="card p-relative pb-12">
+                    <img src="https://picsum.photos/300/200" alt="Participant">
+                    <div class="user p-absolute bg-opacity p-5 c-white">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        <span>Pinco Pallo</span>
+                    </div>
+                </div>
+
+            </div>
         </main>
 
         <!-- FOOTER -->
@@ -46,7 +327,7 @@
                 <i class="fa-solid fa-comment">Chat</i>
                 <i class="fa-solid fa-record-vinyl">Record</i>
                 <i class="fa-solid fa-grid-2">Breakout Rooms</i>
-                <i class="fa-regular fa-ellipsis">More</i>
+                <i class="fa-solid fa-ellipsis">More</i>
             </div>
 
             <div class="footer-right bg-grey ">
